--- a/OventinTS/index.html
+++ b/OventinTS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ovolmatine</title>
+    <title>Zootopia</title>
     <!-- Favicons (đường dẫn tuyệt đối từ thư mục public) -->
       <link rel="shortcut icon" href="./static/Zootopia.png" type="image/x-icon">
     <!-- Google Fonts -->
